Changelog
=========

1.3dev (unreleased)
-------------------

- Added danish translation
  [tmog]


1.2.1 (2010-11-05)
------------------

- Added german translation
  [petschki]


1.2 (2010-10-31)
----------------

- Fix tests for Plone 4
  [sylvainb]

- Added Czech translation
  [naro]

1.1 - 2010-09-15
----------------

- Support for using as a plone.app.discussion captcha plugin (Plone 4)
  [Petri Savolainen]

- Finnish translations
  [Petri Savolainen]

1.0
----------------

- Initial release
  [sylvainb]
