@@ -7,8 +7,10 @@ from z3c.form import validator
 
 from collective.z3cform.norobots.i18n import MessageFactory as _
 
+
 class WrongNorobotsAnswer(ValidationError):
     __doc__ = _("""You entered a wrong answer, please answer the new question below.""")
+
 
 class NorobotsValidator(validator.SimpleFieldValidator):
 
@@ -16,6 +18,5 @@ class NorobotsValidator(validator.SimpleFieldValidator):
         super(NorobotsValidator, self).validate(value)
         norobots = getMultiAdapter((aq_inner(self.context), self.request), name='norobots')
         if norobots.verify(value):
-           return True
+            return True
         raise WrongNorobotsAnswer
-
